# http-performance

./: Makefile  README.md
erlang/: Dockerfile  Makefile  http.erl
golang/: Dockerfile  Makefile
golang/fasthttp/: fasthttp.go
golang/net_http/: net_http.go
haskell/: Dockerfile  Main.hs  Makefile  hello.cabal
haskell/happystack/: Main.hs  http.cabal
haskell/scotty/: Main.hs  http.cabal
haskell/snap/: Main.hs  http.cabal
haskell/spock/: Main.hs  http.cabal  stack.yaml
haskell/warp/: Main.hs  http.cabal
haskell/yesod/: Main.hs  http.cabal
java/: Dockerfile  Makefile
java/src/http/: Http.java
node/: Dockerfile  Makefile  http.js
python/: Dockerfile_japronto  Dockerfile_pypy2  Dockerfile_pypy3  Dockerfile_python2  Dockerfile_python3  Makefile  http_aiohttp.py  http_django.py  http_falcon.py  http_flask.py  http_japronto.py  http_sanic.py  http_tornado.py  http_vibora.py
rust/: Dockerfile  Makefile
rust/http_hyper/: Cargo.toml
rust/http_hyper/src/: main.rs
rust/http_iron/: Cargo.toml
rust/http_iron/src/: main.rs
rust/http_nickel/: Cargo.toml
rust/http_nickel/src/: main.rs
rust/http_rocket/: Cargo.toml
rust/http_rocket/src/: main.rs
