name:                hello
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable hello
  main-is:             Main.hs
  build-depends:       base
                     , http-types
                     , wai
                     , warp
                     , wai-predicates
                     , wai-routing
                     , bytestring
  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -threaded  -rtsopts
  default-language:    Haskell2010
