name:                http
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable http
  main-is:             Main.hs
  build-depends:       base
                     , Spock
  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -threaded -rtsopts -static -optc-static -optl-static
  default-language:    Haskell2010
