name:                http
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable http_yesod
  main-is:             Main.hs
  build-depends:       base
                     , yesod
  default-extensions:  QuasiQuotes, TemplateHaskell, TypeFamilies, ViewPatterns, OverloadedStrings
  ghc-options:         -O2 -threaded -rtsopts -static -optc-static -optl-static
  default-language:    Haskell2010
